--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,30 +1,20 @@
-/* Table of contents ––––––––––––––––––––––––––––––––––––––––––––––––––
-Taken from https://codepen.io/chriddyp/pen/bWLwgP.css
-- Grid
-- Base Styles
- - Typography
- - Links
- - Buttons
- - Forms
- - Lists
- - Code
- - Tables
- - Spacing
- - Utilities
- - Clearing
- - Media Queries
- - Custom App CSS */
+/* References: https://codepen.io/chriddyp/pen/bWLwgP.css */
 
-/* Blockquotes –––––––––––––––––––––––––––––––––––––––––––––––––– */
-blockquote {
-    border-left: 4px lightgrey solid;
-    padding-left: 1rem;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    margin-left: 0rem;
-}
+/* Table of Contents ––––––––––––––––––––––––––––––––––––––––––––––––––
+1. Links
+2. App CSS
+3. Common Styles
+4. Specific Styles
+5. Buttons
+6. Dropdown
+7. Tabs
+8. Tooltip
+9. Custom Classes
+10. Row Styling
+11. Custom Input Group
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-/* Links –––––––––––––––––––––––––––––––––––––––––––––––––– */
+/* 1. Links –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
     color: #1EAEDB;
     text-decoration: underline;
@@ -34,7 +24,7 @@ a:hover {
     color: #0FA0CE;
 }
 
-/* App CSS Below --------------------------------- */
+/* 2. App CSS –––––––––––––––––––––––––––––––––––––––––––––––––– */
 html, body {
     height: 100%;
 }
@@ -58,6 +48,7 @@ a {
     padding: 5px;
 }
 
+/* 3. Common Styles –––––––––––––––––––––––––––––––––––––––––––––––––– */
 /* Common styles for all chart cards */
 .chart-card {
     margin-top: 20px;
@@ -68,6 +59,7 @@ a {
     display: flex;
 }
 
+/* 4. Specific Styles –––––––––––––––––––––––––––––––––––––––––––––––––– */
 /* Specific styles for top charts */
 .top-chart-card {
     height: 500px;
@@ -82,7 +74,7 @@ a {
     background-color: #4292C3;
 }
 
-/* Button */
+/* 5. Buttons –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .custom-button {
     background-color: #4292C3;
     color: white;
@@ -112,7 +104,7 @@ a {
     box-shadow: 0 0 0 3px rgba(66, 146, 195, 0.3);
 }
 
-/* Dropdown */
+/* 6. Dropdown –––––––––––––––––––––––––––––––––––––––––––––––––– */
 /* Custom dropdown styles */
 .custom-dropdown {
     background-color: white;
@@ -158,8 +150,7 @@ a {
     color: #4292C3;
 }
 
-/* Tab */
-/* Tab container styles */
+/* 7. Tabs –––––––––––––––––––––––––––––––––––––––––––––––––– */
 /* Tab container styles */
 .tab-container {
   background-color: #ffc107;
@@ -200,12 +191,7 @@ a {
   border-top: none;
 }
 
-/* Custom class for the collapse component */
-.shadow {
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-/* Tooltip */
+/* 8. Tooltip –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .tooltip-inner {
     background-color: #BFDCEC !important;  /* Set tooltip background to grey */
     color: #2C3E50 !important;  /* Ensure text is visible */
@@ -213,6 +199,7 @@ a {
     padding: 8px 12px !important;  /* Add some padding */
 }
 
+/* 9. Custom Classes –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .custom-placeholder {
     opacity: 0.25;
     width: 100%;
@@ -265,7 +252,7 @@ a {
     font-size: 30px;
 }
 
-/* Row styling */
+/* 10. Row Styling –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .aligned-row {
     display: flex;
     align-items: center;
@@ -273,9 +260,9 @@ a {
     width: 100%;
     margin: 0;
     padding: 10px 0;
-  }
+}
 
-  /* Custom Input Group Styling */
+/* 11. Custom Input Group –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .custom-input-group {
     display: flex;
     align-items: center;
